fixed alignment of contact select

--- a/erp_app/public/stylesheets/erp_app/shared/crm.css
+++ b/erp_app/public/stylesheets/erp_app/shared/crm.css
@@ -4,7 +4,6 @@
 
 .crm-contacts-list-item {
     margin-top: 2px;
-    padding-left: 20px;
     font-size: 11px;
     line-height: 20px;
     cursor: pointer;
@@ -25,7 +24,6 @@
     border-top-left-radius: 0.5em;
     border-bottom-left-radius: 0.5em;
     border-right: none;
-    border-right: 3px solid #ffffff;
     margin-left: 3px;
     background-image: url(/images/icons/simple_arrow/simple_arrow_16x16.png) !important;
     background-repeat:no-repeat !important;
